--- a/notebooks/ihdp-comparison.ipynb
+++ b/notebooks/ihdp-comparison.ipynb
@@ -72,8 +72,13 @@
     "df = pd.read_pickle(\"linear_rct\")\n",
     "df[df['train'] == False][['method', 'train', 'pehe_score-mean', 'enormse-mean']]\n",
     "```    \n",
-    "Hide results based on training data and apply filter for given columns.  \n",
-    "*Remark*: The column **train** denotes wheter the output is computed on data used in training (True) or not (False).\n",
+    "Hide results based on training data and apply filter for given columns. \n",
+    "\n",
+    "*Remarks*: \n",
+    "- The column **train** denotes wheter the output is computed on data used in training (True) or not (False).\n",
+    "- The column **pehe_score-mean** actually represents $\\sqrt{PEHE} $ and is referred as such in the work.\n",
+    "- The column **enormse-mean** is referred to $ENoRMSE $ in the work.\n",
+    "\n",
     "## Reproduction\n",
     "All results can be found in `notebooks/outputs` in serialized format.  \n",
     "The script `notebooks/run_all.py` has been used to compute the result and therefore can be used for reproduction. Be **warned** this process can take a lot of time. For reference:\n",
